--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherApp">
         <activity
+            android:name=".activities.ForecastActivity"
+            android:exported="false"
+            android:label="@string/title_activity_forecast" />
+        <activity
             android:name=".activities.DetailedWeatherActivity"
             android:exported="false" />
         <activity
