--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             android:label="@string/title_activity_forecast" />
         <activity
             android:name=".activities.DetailedWeatherActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/title_activity_forecast" />
         <activity
             android:name=".activities.SettingsActivity"
             android:exported="false"
